open-policy-agent/open-policy-agent/policy/gen-replica-limits/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: replicalimits
tests:
- name: block-endpoint-default-role
  template: template.yaml
  constraint: constraint.yaml
  cases:
  - name: example-allowed
    object: samples/replicalimits/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: samples/replicalimits/example_disallowed.yaml
    assertions:
    - violations: yes
